Adicionando o front da página Home

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,7 +15,7 @@
             <span class="header-logo logo gradientFont">Avante</span>
         </div>
         <div class="header-links-container">
-            <a href="">Sobre nós</a>
+            <a href="./home.html">Sobre nós</a>
             <div class="header-buttons-container">
                 <button class="header-button-full fullColorLP">Cadastrar</button>
                 <button class="header-button-gradientBorder gradientBorderLP">Entrar</button>
