Começando a fazer o front da página de perfil do usuário

--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -15,7 +15,7 @@
             <span class="header-logo logo gradientFont">Avante</span>
         </div>
         <div class="header-button-container">
-            <button class="gradientBorderLP">MS</button>
+            <a class="gradientBorderLP" href="./profile.html">MS</a>
         </div>
     </header>
 
