Adicionando as páginas de login e cadastro

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -17,8 +17,8 @@
         <div class="header-links-container">
             <a href="./home.html">Sobre nós</a>
             <div class="header-buttons-container">
-                <button class="header-button-full fullColorLP">Cadastrar</button>
-                <button class="header-button-gradientBorder gradientBorderLP">Entrar</button>
+                <a href="./cadastro.html"><button class="header-button-full fullColorLP">Cadastrar</button></a>
+                <a href="./login.html"><button class="header-button-gradientBorder gradientBorderLP">Entrar</button></a>
             </div>
         </div>
     </header>
@@ -30,8 +30,8 @@
                 <p>Uma ferramenta que permite o uso de jogos educativos em sala de aula com apenas um computador</p>
             </div>
             <div class="main-box1-button-container">
-                <button class="main-box1-button-full fullColorLP">Começar agora</button>
-                <button class="gradientBorderLP">Já tenho conta</button>
+                <a href="./cadastro.html"><button class="main-box1-button-full fullColorLP">Começar agora</button></a>
+                <a href="./login.html"><button class="gradientBorderLP">Já tenho conta</button></a>
             </div>
         </div>
         <!-- Porque usar -->
@@ -118,8 +118,8 @@
                 <h2>Pronto para ensinar com diversão?</h2>
             </div>
             <div class="main-box4-buttons">
-                <button class="fullColorLP">Começar agora</button>
-                <button class="gradientBorderLP">Já tenho conta</button>
+                <a href="./cadastro.html"><button class="fullColorLP">Começar agora</button></a>
+                <a href="./login.html"><button class="gradientBorderLP">Já tenho conta</button></a>
             </div>
             
         </div>
