--- a/src/main/resources/static/profile.html
+++ b/src/main/resources/static/profile.html
@@ -23,7 +23,11 @@
         </div>
     </header>
     <main>
-        
+        <h1>ERRO 404</h1>
+        <p>Essa página ainda está sendo construida</p>
+        <div>
+            <img src="./assets/icons/roboErro.png" alt="">
+        </div>
     </main>
     <footer>
 
