adicionando funcionalidades de login e cadastro

--- a/src/main/resources/static/cadastro.html
+++ b/src/main/resources/static/cadastro.html
@@ -33,23 +33,23 @@
                     <img src="./assets/icons/cadastro-login/roboCadastro.png" alt="Ilustração de um robô com roupa de festa">
                 </div>
             </div>
-            <form action="./home.html">
+            <form action="/cadastro" method="POST">
                 <div class="form-inputs">
                     <fieldset>
-                        <label for="">Nome:</label>
-                        <input type="text" name="" id="">
+                        <label for="nome">Nome:</label>
+                        <input type="text" name="nome" id="nome">
                     </fieldset>
                     <fieldset>
-                        <label for="">E-mail:</label>
-                        <input type="email" name="" id="">
+                        <label for="email">E-mail:</label>
+                        <input type="email" name="email" id="email">
                     </fieldset>
                     <fieldset>
-                        <label for="">Senha:</label>
-                        <input type="password" name="" id="">
+                        <label for="senha">Senha:</label>
+                        <input type="password" name="senha" id="senha">
                     </fieldset>
                     <fieldset>
-                        <label for="">Digite sua senha novamente:</label>
-                        <input type="password" name="" id="">
+                        <label for="confirmacaoSenha">Digite sua senha novamente:</label>
+                        <input type="password" name="confirmacaoSenha" id="confirmacaoSenha">
                     </fieldset>
                 </div>
                 <div class="form-button-container">
