--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -33,15 +33,15 @@
                     <img src="./assets/icons/cadastro-login/roboLogin.png" alt="Ilustração de um robô com roupa de festa">
                 </div>
             </div>
-            <form action="./home.html">
+            <form action="/login" method="POST">
                 <div class="form-inputs">
                     <fieldset>
-                        <label for="">E-mail:</label>
-                        <input type="email" name="" id="">
+                        <label for="email">E-mail:</label>
+                        <input type="email" name="email" id="email">
                     </fieldset>
                     <fieldset>
-                        <label for="">Senha:</label>
-                        <input type="password" name="" id="">
+                        <label for="senha">Senha:</label>
+                        <input type="password" name="senha" id="senha">
                     </fieldset>
                 </div>
                 <div class="form-button-container">
