adicionando controller para exibição do nome do usuario na página home.html

--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -23,7 +23,7 @@
         <div class="main-box1">
             <div class="gradientBorderLP">
                 <div class="main-box1-text">
-                    <h2>Olá, Prof. Maria Silva!</h2>
+                    <h2 id="saudacao-usuario">Olá, Prof. Maria Silva!</h2>
                     <p>Pronto para criar experiências de aprendizado incríveis hoje? </p>
                 </div>
                 <div class="main-box1-button-container">
