--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="css/gameCard.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Marhey:wght@300..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -69,6 +70,7 @@
                                 <div class="gameCard-text">
                                     <h6>Três porquinhos</h6>
                                     <p>Competição sobre os Três porquinhos</p>
+                                    <span>Por: Joana Silva</span>
                                 </div>
                                 <div class="gameCard-info-container">
                                     <div>
@@ -109,6 +111,7 @@
                                 <div class="gameCard-text">
                                     <h6>Três porquinhos</h6>
                                     <p>Competição sobre os Três porquinhos</p>
+                                    <span>Por: Joana Silva</span>
                                 </div>
                                 <div class="gameCard-info-container">
                                     <div>
@@ -150,6 +153,7 @@
                                 <div class="gameCard-text">
                                     <h6>Três porquinhos</h6>
                                     <p>Competição sobre os Três porquinhos</p>
+                                    <span>Por: Joana Silva</span>
                                 </div>
                                 <div class="gameCard-info-container">
                                     <div>
@@ -211,6 +215,7 @@
                                 <div class="gameCard-text">
                                     <h6>Três porquinhos</h6>
                                     <p>Competição sobre os Três porquinhos</p>
+                                    <span>Por: Joana Silva</span>
                                 </div>
                                 <div class="gameCard-info-container">
                                     <div>
@@ -251,6 +256,7 @@
                                 <div class="gameCard-text">
                                     <h6>Três porquinhos</h6>
                                     <p>Competição sobre os Três porquinhos</p>
+                                    <span>Por: Joana Silva</span>
                                 </div>
                                 <div class="gameCard-info-container">
                                     <div>
@@ -292,6 +298,7 @@
                                 <div class="gameCard-text">
                                     <h6>Três porquinhos</h6>
                                     <p>Competição sobre os Três porquinhos</p>
+                                    <span>Por: Joana Silva</span>
                                 </div>
                                 <div class="gameCard-info-container">
                                     <div>
