--- a/src/main/resources/static/profile.html
+++ b/src/main/resources/static/profile.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/profile.css">
+    <link rel="stylesheet" href="css/gameCard.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Marhey:wght@300..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -11,27 +12,96 @@
 </head>
 <body>
     <header>
-        <div>
-            <span class="header-logo logo gradientFont">Avante</span>
-        </div>
-        <div class="header-links-container">
-            <a href="./home.html">Sobre nós</a>
-            <div class="header-buttons-container">
-                <button class="header-button-full fullColorLP">Cadastrar</button>
-                <button class="header-button-gradientBorder gradientBorderLP">Entrar</button>
+        <div class="header-leftBox">
+            <div>
+                <a class="gradientBorderLP" href="./home.html">
+                    <img src="./assets/icons/cadastro-login/setaVoltar.svg" alt="Icone de seta voltando">
+                    Voltar
+                </a>
             </div>
+            <h2>Meu Perfil</h2>
         </div>
     </header>
     <main>
-        <h1>ERRO 404</h1>
+        <!-- <h1>ERRO 404</h1>
         <p>Essa página ainda está sendo construida</p>
         <div>
             <img src="./assets/icons/roboErro.png" alt="">
+        </div> -->
+        <div class="profile-picture gradientBorderLP">
+        </div>
+        <div class="user-card">
+            <div class="user-card-text">
+                <h2>Professora Maria da Silva</h2>
+                <p>mariaSilva@gmail.com</p>
+            </div>
+            <div class="user-card-cards-container">
+                <div class="infoCard blue">
+                    <div class="infoCard-text">
+                        <img src="./assets/icons/gameCard/playBrancoIcon.svg" alt="Ícone de play">
+                        <span>120</span>
+                    </div>
+                    <div>
+                        <span>Jogos jogados</span>
+                    </div>
+                </div>
+
+                <div class="infoCard pink">
+                    <div class="infoCard-text">
+                        <img src="./assets/icons/profilePage/saveIcon.svg" alt="">
+                        <span>3</span>
+                    </div>
+                    <div>
+                        <span>Jogos salvos</span>
+                    </div>
+                </div>
+
+                <div class="infoCard purple">
+                    <div class="infoCard-text">
+                        <img src="./assets/icons/profilePage/olhoIcon.svg" alt="">
+                        <span>30</span>
+                    </div>
+                    <div>
+                        <span>Visualizações</span>
+                    </div>
+                </div>
+
+                <div class="infoCard green">
+                    <div class="infoCard-text">
+                        <img src="./assets/icons/profilePage/trofeuIcon.svg" alt="">
+                        <span>3</span>
+                    </div>
+                    <div>
+                        <span>Jogos jogados</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="gameArea-container">
+            <div class="gameArea-filters-row">
+                <div class="gameArea-filters-container" id="container">
+                    
+                </div>
+                <div class="gameArea-filters-create">
+                    <button class="fullColorLP">
+                        <img src="./assets/icons/homeMainBox1/plusIcon.svg" alt="">
+                        Criar novo jogo
+                    </button>
+                </div>
+            </div>
+            <div>
+                <div class="cards-container" id="cards-container">
+
+                </div>
+            </div>
+
         </div>
     </main>
     <footer>
 
     </footer>
-    <script src="./js/landingPage.js"></script>
+    <script src="./js/profile.js"></script>
 </body>
 </html>
