Modificando detalhes nas informações do front

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -70,7 +70,7 @@
                             <img src="./assets/icons/mainBox3Cards/forcaIcon.svg" alt="">
                         </div>
                         <div class="slider-card-text">
-                            <p>Ideal para associar termos com conceitos de maneira rápida.</p>
+                            <p>Jogo clássico de forca, ideal para associar termos com conceitos de maneira rápida.</p>
                         </div>
                     </div>
                     <div class="slider-card gamesCard">
