--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -287,7 +287,7 @@
                         <div class="gameCard-content-container">
                             <div class="gameCard-content">
                                 <div class="gameCard-tags-container">
-                                    <div class="gameCard-tag">
+                                    <div class="gameCard-tag versus">
                                         <span>Versus</span>
                                     </div>
                                     <span>12-13 anos</span>
