adicionando funcionalidade de nome do usuario dinâmico

--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -16,7 +16,7 @@
             <span class="header-logo logo gradientFont">Avante</span>
         </div>
         <div class="header-button-container">
-            <a class="gradientBorderLP" href="./profile.html">MS</a>
+            <a class="gradientBorderLP" href="./profile.html" id="iniciais-usuario">MS</a>
         </div>
     </header>
 
