--- a/src/main/resources/static/profile.html
+++ b/src/main/resources/static/profile.html
@@ -32,8 +32,8 @@
         </div>
         <div class="user-card">
             <div class="user-card-text">
-                <h2>Professora Maria da Silva</h2>
-                <p>mariaSilva@gmail.com</p>
+                <h2 id="profile-nome-usuario">Professora Maria da Silva</h2>
+                <p id="profile-email-usuario">mariaSilva@gmail.com</p>
             </div>
             <div class="user-card-cards-container">
                 <div class="infoCard blue">
