adicionando funcionalidade de logout

--- a/src/main/resources/static/gameStart.html
+++ b/src/main/resources/static/gameStart.html
@@ -64,7 +64,9 @@
                 </div>
 
                 <div>
-                    <button type="submit" class="fullColorLP">Começar</button>
+                    <form action="" id="game-start-form">
+                        <button type="submit" class="fullColorLP">Começar</button>
+                    </form>
                 </div>
             </form>
 
