--- a/src/main/resources/static/profile.html
+++ b/src/main/resources/static/profile.html
@@ -20,6 +20,7 @@
                 </a>
             </div>
             <h2>Meu Perfil</h2>
+            <a href="/logout" class="logout-button">Sair da Conta</a>
         </div>
     </header>
     <main>
