--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/home.css">
-    <link rel="stylesheet" href="css/gameCard.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Marhey:wght@300..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -16,7 +15,7 @@
             <span class="header-logo logo gradientFont">Avante</span>
         </div>
         <div class="header-button-container">
-            <a class="gradientBorderLP" href="./profile.html" id="iniciais-usuario">MS</a>
+            <a class="gradientBorderLP" href="./profile.html">MS</a>
         </div>
     </header>
 
@@ -24,7 +23,7 @@
         <div class="main-box1">
             <div class="gradientBorderLP">
                 <div class="main-box1-text">
-                    <h2 id="saudacao-usuario">Olá, Prof. Maria Silva!</h2>
+                    <h2>Olá, Prof. Maria Silva!</h2>
                     <p>Pronto para criar experiências de aprendizado incríveis hoje? </p>
                 </div>
                 <div class="main-box1-button-container">
@@ -32,10 +31,12 @@
                         <img src="./assets/icons/homeMainBox1/plusIcon.svg" alt="">
                         Criar jogo agora
                     </button>
-                    <button class="fullColorLP">
-                        <img src="./assets/icons/homeMainBox1/bussolaIcon.svg" alt="">
-                        Explorar jogos
-                    </button>
+                    <a href="./colecaoJogos.html">
+                        <button class="fullColorLP">
+                            <img src="./assets/icons/homeMainBox1/bussolaIcon.svg" alt="">
+                            Explorar jogos
+                        </button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -57,29 +58,28 @@
 
                     <div class="gameCard">
                         <div class="banner">
-                            <img src="./assets/banners/castleBanner.png" alt="">
+                            <img src="./assets/banners/pigBanner.png" alt="">
                         </div>
                         <div class="gameCard-content-container">
                             <div class="gameCard-content">
                                 <div class="gameCard-tags-container">
-                                    <div class="gameCard-tag versus">
-                                        <span>Versus</span>
+                                    <div class="gameCard-tag">
+                                        <span>Gincana</span>
                                     </div>
-                                    <span>15-16 anos</span>
+                                    <span>3-5 anos</span>
                                 </div>
                                 <div class="gameCard-text">
-                                    <h6>Era medieval</h6>
-                                    <p>Revisão sobre a época da Idade Média</p>
-                                    <span>Por: Solange Oliveira</span>
+                                    <h6>Três porquinhos</h6>
+                                    <p>Competição sobre os Três porquinhos</p>
                                 </div>
                                 <div class="gameCard-info-container">
                                     <div>
                                         <img src="./assets/icons/gameCard/playPurpleIcon.svg" alt="Icone de play">
-                                        <span>35</span>
+                                        <span>321</span>
                                     </div>
                                     <div>
                                         <button onclick="add()"><img src="./assets/icons/gameCard/saveLineIcon.svg" alt="Icone de salvar"></button>
-                                        <span>490</span>
+                                        <span>321</span>
                                     </div>
                                 </div>
                                 <div>
@@ -98,29 +98,28 @@
 
                     <div class="gameCard">
                         <div class="banner">
-                            <img src="./assets/banners/floresBanner.png" alt="">
+                            <img src="./assets/banners/pigBanner.png" alt="">
                         </div>
                         <div class="gameCard-content-container">
                             <div class="gameCard-content">
                                 <div class="gameCard-tags-container">
-                                    <div class="gameCard-tag gincana">
+                                    <div class="gameCard-tag">
                                         <span>Gincana</span>
                                     </div>
-                                    <span>Ensino Médio</span>
+                                    <span>3-5 anos</span>
                                 </div>
                                 <div class="gameCard-text">
-                                    <h6>Angiospermas</h6>
-                                    <p>Revisão para o vestibular sobre Angiospermas</p>
-                                    <span>Por: Carolina Santos</span>
+                                    <h6>Três porquinhos</h6>
+                                    <p>Competição sobre os Três porquinhos</p>
                                 </div>
                                 <div class="gameCard-info-container">
                                     <div>
                                         <img src="./assets/icons/gameCard/playPurpleIcon.svg" alt="Icone de play">
-                                        <span>1.201</span>
+                                        <span>321</span>
                                     </div>
                                     <div>
                                         <button><img src="./assets/icons/gameCard/saveLineIcon.svg" alt="Icone de salvar"></button>
-                                        <span>3.042</span>
+                                        <span>321</span>
                                     </div>
                                 </div>
                                 <div>
@@ -140,29 +139,28 @@
 
                     <div class="gameCard">
                         <div class="banner">
-                            <img src="./assets/banners/atomoBanner.png" alt="">
+                            <img src="./assets/banners/pigBanner.png" alt="">
                         </div>
                         <div class="gameCard-content-container">
                             <div class="gameCard-content">
                                 <div class="gameCard-tags-container">
-                                    <div class="gameCard-tag poderes">
-                                        <span>Poderes</span>
+                                    <div class="gameCard-tag">
+                                        <span>Gincana</span>
                                     </div>
-                                    <span>Ensino Médio</span>
+                                    <span>3-5 anos</span>
                                 </div>
                                 <div class="gameCard-text">
-                                    <h6>Modelos atômicos</h6>
-                                    <p>Revisando os principais modelos atômicos</p>
-                                    <span>Por: Viviane Souza</span>
+                                    <h6>Três porquinhos</h6>
+                                    <p>Competição sobre os Três porquinhos</p>
                                 </div>
                                 <div class="gameCard-info-container">
                                     <div>
                                         <img src="./assets/icons/gameCard/playPurpleIcon.svg" alt="Icone de play">
-                                        <span>5.200</span>
+                                        <span>321</span>
                                     </div>
                                     <div>
                                         <button><img src="./assets/icons/gameCard/saveLineIcon.svg" alt="Icone de salvar"></button>
-                                        <span>436</span>
+                                        <span>321</span>
                                     </div>
                                 </div>
                                 <div>
@@ -202,29 +200,28 @@
 
                     <div class="gameCard">
                         <div class="banner">
-                            <img src="./assets/banners/colorBanner.png" alt="">
+                            <img src="./assets/banners/pigBanner.png" alt="">
                         </div>
                         <div class="gameCard-content-container">
                             <div class="gameCard-content">
                                 <div class="gameCard-tags-container">
-                                    <div class="gameCard-tag memoria">
-                                        <span>Memoria</span>
+                                    <div class="gameCard-tag">
+                                        <span>Gincana</span>
                                     </div>
-                                    <span>3-4 anos</span>
+                                    <span>3-5 anos</span>
                                 </div>
                                 <div class="gameCard-text">
-                                    <h6>Nomes de cores</h6>
-                                    <p>Memorizando diferentes cores</p>
-                                    <span>Por: Liliana da Silva</span>
+                                    <h6>Três porquinhos</h6>
+                                    <p>Competição sobre os Três porquinhos</p>
                                 </div>
                                 <div class="gameCard-info-container">
                                     <div>
                                         <img src="./assets/icons/gameCard/playPurpleIcon.svg" alt="Icone de play">
-                                        <span>621</span>
+                                        <span>321</span>
                                     </div>
                                     <div>
                                         <button><img src="./assets/icons/gameCard/saveLineIcon.svg" alt="Icone de salvar"></button>
-                                        <span>854</span>
+                                        <span>321</span>
                                     </div>
                                 </div>
                                 <div>
@@ -240,31 +237,31 @@
                         </div>
                     </div>
 
+
                     <div class="gameCard">
                         <div class="banner">
-                            <img src="./assets/banners/fisicaBanner.png" alt="">
+                            <img src="./assets/banners/pigBanner.png" alt="">
                         </div>
                         <div class="gameCard-content-container">
                             <div class="gameCard-content">
                                 <div class="gameCard-tags-container">
-                                    <div class="gameCard-tag detetive">
-                                        <span>Detetive</span>
+                                    <div class="gameCard-tag">
+                                        <span>Gincana</span>
                                     </div>
-                                    <span>Ensino Médio</span>
+                                    <span>3-5 anos</span>
                                 </div>
                                 <div class="gameCard-text">
-                                    <h6>Física basica</h6>
-                                    <p>Relembrando conceitos basicos de física</p>
-                                    <span>Por: João Carneiro</span>
+                                    <h6>Três porquinhos</h6>
+                                    <p>Competição sobre os Três porquinhos</p>
                                 </div>
                                 <div class="gameCard-info-container">
                                     <div>
                                         <img src="./assets/icons/gameCard/playPurpleIcon.svg" alt="Icone de play">
-                                        <span>5.092</span>
+                                        <span>321</span>
                                     </div>
                                     <div>
                                         <button><img src="./assets/icons/gameCard/saveLineIcon.svg" alt="Icone de salvar"></button>
-                                        <span>8.394</span>
+                                        <span>321</span>
                                     </div>
                                 </div>
                                 <div>
@@ -280,31 +277,32 @@
                         </div>
                     </div>
 
+
+
                     <div class="gameCard">
                         <div class="banner">
-                            <img src="./assets/banners/sportBanner.png" alt="">
+                            <img src="./assets/banners/pigBanner.png" alt="">
                         </div>
                         <div class="gameCard-content-container">
                             <div class="gameCard-content">
                                 <div class="gameCard-tags-container">
-                                    <div class="gameCard-tag versus">
-                                        <span>Versus</span>
+                                    <div class="gameCard-tag">
+                                        <span>Gincana</span>
                                     </div>
-                                    <span>12-13 anos</span>
+                                    <span>3-5 anos</span>
                                 </div>
                                 <div class="gameCard-text">
-                                    <h6>Futsal</h6>
-                                    <p>Aula teórica: Relembrando as regras do futsal</p>
-                                    <span>Por: Jorge Jr.</span>
+                                    <h6>Três porquinhos</h6>
+                                    <p>Competição sobre os Três porquinhos</p>
                                 </div>
                                 <div class="gameCard-info-container">
                                     <div>
                                         <img src="./assets/icons/gameCard/playPurpleIcon.svg" alt="Icone de play">
-                                        <span>35</span>
+                                        <span>321</span>
                                     </div>
                                     <div>
                                         <button><img src="./assets/icons/gameCard/saveLineIcon.svg" alt="Icone de salvar"></button>
-                                        <span>78</span>
+                                        <span>321</span>
                                     </div>
                                 </div>
                                 <div>
@@ -319,6 +317,7 @@
                             
                         </div>
                     </div>
+
                     
 
                 </div>
