Arrumando os cards dos jogos da página Home

--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -57,30 +57,35 @@
                 <div class="cards-container">
 
 
-                    <div class="gameCard">
+
+
+
+
+                     <div class="gameCard">
                         <div class="banner">
-                            <img src="./assets/banners/pigBanner.png" alt="">
+                            <img src="./assets/banners/castleBanner.png" alt="">
                         </div>
                         <div class="gameCard-content-container">
                             <div class="gameCard-content">
                                 <div class="gameCard-tags-container">
-                                    <div class="gameCard-tag">
-                                        <span>Gincana</span>
+                                    <div class="gameCard-tag versus">
+                                        <span>Versus</span>
                                     </div>
-                                    <span>3-5 anos</span>
+                                    <span>15-16 anos</span>
                                 </div>
                                 <div class="gameCard-text">
-                                    <h6>Três porquinhos</h6>
-                                    <p>Competição sobre os Três porquinhos</p>
+                                    <h6>Era medieval</h6>
+                                    <p>Revisão sobre a época da Idade Média</p>
+                                    <span>Por: Solange Oliveira</span>
                                 </div>
                                 <div class="gameCard-info-container">
                                     <div>
                                         <img src="./assets/icons/gameCard/playPurpleIcon.svg" alt="Icone de play">
-                                        <span>321</span>
+                                        <span>35</span>
                                     </div>
                                     <div>
                                         <button onclick="add()"><img src="./assets/icons/gameCard/saveLineIcon.svg" alt="Icone de salvar"></button>
-                                        <span>321</span>
+                                        <span>490</span>
                                     </div>
                                 </div>
                                 <div>
@@ -99,28 +104,29 @@
 
                     <div class="gameCard">
                         <div class="banner">
-                            <img src="./assets/banners/pigBanner.png" alt="">
+                            <img src="./assets/banners/floresBanner.png" alt="">
                         </div>
                         <div class="gameCard-content-container">
                             <div class="gameCard-content">
                                 <div class="gameCard-tags-container">
-                                    <div class="gameCard-tag">
+                                    <div class="gameCard-tag gincana">
                                         <span>Gincana</span>
                                     </div>
-                                    <span>3-5 anos</span>
+                                    <span>Ensino Médio</span>
                                 </div>
                                 <div class="gameCard-text">
-                                    <h6>Três porquinhos</h6>
-                                    <p>Competição sobre os Três porquinhos</p>
+                                    <h6>Angiospermas</h6>
+                                    <p>Revisão para o vestibular sobre Angiospermas</p>
+                                    <span>Por: Carolina Santos</span>
                                 </div>
                                 <div class="gameCard-info-container">
                                     <div>
                                         <img src="./assets/icons/gameCard/playPurpleIcon.svg" alt="Icone de play">
-                                        <span>321</span>
+                                        <span>1.201</span>
                                     </div>
                                     <div>
                                         <button><img src="./assets/icons/gameCard/saveLineIcon.svg" alt="Icone de salvar"></button>
-                                        <span>321</span>
+                                        <span>3.042</span>
                                     </div>
                                 </div>
                                 <div>
@@ -140,28 +146,29 @@
 
                     <div class="gameCard">
                         <div class="banner">
-                            <img src="./assets/banners/pigBanner.png" alt="">
+                            <img src="./assets/banners/atomoBanner.png" alt="">
                         </div>
                         <div class="gameCard-content-container">
                             <div class="gameCard-content">
                                 <div class="gameCard-tags-container">
-                                    <div class="gameCard-tag">
-                                        <span>Gincana</span>
+                                    <div class="gameCard-tag poderes">
+                                        <span>Poderes</span>
                                     </div>
-                                    <span>3-5 anos</span>
+                                    <span>Ensino Médio</span>
                                 </div>
                                 <div class="gameCard-text">
-                                    <h6>Três porquinhos</h6>
-                                    <p>Competição sobre os Três porquinhos</p>
+                                    <h6>Modelos atômicos</h6>
+                                    <p>Revisando os principais modelos atômicos</p>
+                                    <span>Por: Viviane Souza</span>
                                 </div>
                                 <div class="gameCard-info-container">
                                     <div>
                                         <img src="./assets/icons/gameCard/playPurpleIcon.svg" alt="Icone de play">
-                                        <span>321</span>
+                                        <span>5.200</span>
                                     </div>
                                     <div>
                                         <button><img src="./assets/icons/gameCard/saveLineIcon.svg" alt="Icone de salvar"></button>
-                                        <span>321</span>
+                                        <span>436</span>
                                     </div>
                                 </div>
                                 <div>
@@ -201,28 +208,29 @@
 
                     <div class="gameCard">
                         <div class="banner">
-                            <img src="./assets/banners/pigBanner.png" alt="">
+                            <img src="./assets/banners/colorBanner.png" alt="">
                         </div>
                         <div class="gameCard-content-container">
                             <div class="gameCard-content">
                                 <div class="gameCard-tags-container">
-                                    <div class="gameCard-tag">
-                                        <span>Gincana</span>
+                                    <div class="gameCard-tag memoria">
+                                        <span>Memoria</span>
                                     </div>
-                                    <span>3-5 anos</span>
+                                    <span>3-4 anos</span>
                                 </div>
                                 <div class="gameCard-text">
-                                    <h6>Três porquinhos</h6>
-                                    <p>Competição sobre os Três porquinhos</p>
+                                    <h6>Nomes de cores</h6>
+                                    <p>Memorizando diferentes cores</p>
+                                    <span>Por: Liliana da Silva</span>
                                 </div>
                                 <div class="gameCard-info-container">
                                     <div>
                                         <img src="./assets/icons/gameCard/playPurpleIcon.svg" alt="Icone de play">
-                                        <span>321</span>
+                                        <span>621</span>
                                     </div>
                                     <div>
                                         <button><img src="./assets/icons/gameCard/saveLineIcon.svg" alt="Icone de salvar"></button>
-                                        <span>321</span>
+                                        <span>854</span>
                                     </div>
                                 </div>
                                 <div>
@@ -238,31 +246,31 @@
                         </div>
                     </div>
 
-
                     <div class="gameCard">
                         <div class="banner">
-                            <img src="./assets/banners/pigBanner.png" alt="">
+                            <img src="./assets/banners/fisicaBanner.png" alt="">
                         </div>
                         <div class="gameCard-content-container">
                             <div class="gameCard-content">
                                 <div class="gameCard-tags-container">
-                                    <div class="gameCard-tag">
-                                        <span>Gincana</span>
+                                    <div class="gameCard-tag detetive">
+                                        <span>Detetive</span>
                                     </div>
-                                    <span>3-5 anos</span>
+                                    <span>Ensino Médio</span>
                                 </div>
                                 <div class="gameCard-text">
-                                    <h6>Três porquinhos</h6>
-                                    <p>Competição sobre os Três porquinhos</p>
+                                    <h6>Física basica</h6>
+                                    <p>Relembrando conceitos basicos de física</p>
+                                    <span>Por: João Carneiro</span>
                                 </div>
                                 <div class="gameCard-info-container">
                                     <div>
                                         <img src="./assets/icons/gameCard/playPurpleIcon.svg" alt="Icone de play">
-                                        <span>321</span>
+                                        <span>5.092</span>
                                     </div>
                                     <div>
                                         <button><img src="./assets/icons/gameCard/saveLineIcon.svg" alt="Icone de salvar"></button>
-                                        <span>321</span>
+                                        <span>8.394</span>
                                     </div>
                                 </div>
                                 <div>
@@ -278,32 +286,31 @@
                         </div>
                     </div>
 
-
-
                     <div class="gameCard">
                         <div class="banner">
-                            <img src="./assets/banners/pigBanner.png" alt="">
+                            <img src="./assets/banners/sportBanner.png" alt="">
                         </div>
                         <div class="gameCard-content-container">
                             <div class="gameCard-content">
                                 <div class="gameCard-tags-container">
                                     <div class="gameCard-tag">
-                                        <span>Gincana</span>
+                                        <span>Versus</span>
                                     </div>
-                                    <span>3-5 anos</span>
+                                    <span>12-13 anos</span>
                                 </div>
                                 <div class="gameCard-text">
-                                    <h6>Três porquinhos</h6>
-                                    <p>Competição sobre os Três porquinhos</p>
+                                    <h6>Futsal</h6>
+                                    <p>Aula teórica: Relembrando as regras do futsal</p>
+                                    <span>Por: Jorge Jr.</span>
                                 </div>
                                 <div class="gameCard-info-container">
                                     <div>
                                         <img src="./assets/icons/gameCard/playPurpleIcon.svg" alt="Icone de play">
-                                        <span>321</span>
+                                        <span>35</span>
                                     </div>
                                     <div>
                                         <button><img src="./assets/icons/gameCard/saveLineIcon.svg" alt="Icone de salvar"></button>
-                                        <span>321</span>
+                                        <span>78</span>
                                     </div>
                                 </div>
                                 <div>
